syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc LoginUser (LoginUserDto) returns (LoginUserResponse) {}
  rpc CreateAdmin (CreateUserDto) returns (User) {}
}

message User {
  string _id = 1;
  string username = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
  string phone = 6;
  repeated string roles = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message LoginUserResponse {
  string accessToken = 1;
}

message CreateUserDto {
  string username = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
}

message LoginUserDto {
  string username = 1;
  string password = 2;
}